--- a/src/index.html
+++ b/src/index.html
@@ -5,62 +5,50 @@
         <link rel="shortcut icon" href="./assets/image/favicon.svg" type="image/x-icon">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="./assets/css/custom.css" rel="stylesheet">
-        <link href="./assets/css/output.css" rel="stylesheet">
+        <link href="./assets/custom.css" rel="stylesheet">
+        <link href="./assets/output.css" rel="stylesheet">
     </head>
     <body class="dark:bg-[#050505] dark:text-white selection:bg-primary">
-        <nav class="z-2 fixed top-0 left-0 w-full py-4 px-10 flex justify-between dark:bg-[#050505] bg-white">
+        <!-- navbar - top -->
+        <nav class="z-2 fixed top-0 left-0 w-full py-4 pl-3 pr-8 lg:px-10 flex justify-between dark:bg-[#050505] bg-white">
+            <!-- left side -->
             <div class="flex gap-2 lg:gap-5">
-                <a href="./index.html" class="flex gap-2 h-full items-center">
-                    <img src="./assets/image/company-logo.png" alt="company logo" class="h-5 lg:h-7">
-                    <span class="bg-black/20 dark:bg-white/20 rotate-25 h-5 lg:h-7 w-[3px]"></span>
-                    <img src="./assets/image/logo.png" alt="theme logo" class="h-5 lg:h-7">
-                </a>
-                <p class="bg-light dark:bg-dark lg:px-4 px-2 lg:py-2 text-xs lg:text-base rounded-full transition-all hover:bg-primary/50 transition-allll flex items-center justify-center gap-1">
-                    <span>v3.6.2</span>
-                    <svg class="fill-black dark:fill-white" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3"><path d="M480-344 240-584l56-56 184 184 184-184 56 56-240 240Z"/></svg>
-                </p>
-            </div>
-            <div class="lg:gap-4 gap-2 flex">
-                <div class="lg:flex hidden gap-2">
-                    <a href="" class="bg-light dark:bg-dark rounded-full px-4 py-2 flex gap-2 hover:bg-primary/50 transition-all">
-                        <svg class="fill-black dark:fill-white" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"><path d="m480-80-10-120h-10q-142 0-241-99t-99-241q0-142 99-241t241-99q71 0 132.5 26.5t108 73q46.5 46.5 73 108T800-540q0 75-24.5 144t-67 128q-42.5 59-101 107T480-80Zm80-146q71-60 115.5-140.5T720-540q0-109-75.5-184.5T460-800q-109 0-184.5 75.5T200-540q0 109 75.5 184.5T460-280h100v54Zm-101-95q17 0 29-12t12-29q0-17-12-29t-29-12q-17 0-29 12t-12 29q0 17 12 29t29 12Zm-29-127h60q0-30 6-42t38-44q18-18 30-39t12-45q0-51-34.5-76.5T460-720q-44 0-74 24.5T344-636l56 22q5-17 19-33.5t41-16.5q27 0 40.5 15t13.5 33q0 17-10 30.5T480-558q-35 30-42.5 47.5T430-448Zm30-65Z"/></svg>
-                        <span>Support</span>
+                <!-- logo -->
+                <div class="flex gap-2 h-full items-center">
+                    <a target="_blank" href="https://codeovik.web.app">
+                        <img src="./assets/image/company-logo.png" alt="company logo" class="h-6 lg:h-7">
                     </a>
-                    <a href="" class="bg-light dark:bg-dark rounded-full px-4 py-2 flex gap-2 hover:bg-primary/50 transition-all">
-                        <svg class="fill-black dark:fill-white" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"><path d="m713-280 127-297v-23H588l19-134-55 55q-8-8-28-28.5T496-736l144-144 32 32q14 14 19.5 31.5T694-780l-14 100h160q33 0 56.5 23.5T920-600v23q0 8-1.5 16t-4.5 16l-93 216q-10 22-30 35.5T747-280h-34ZM240-120H40v-400h200v80H120v240h120v80Zm267 0H160v-360l240-240 32 32q14 14 19.5 31.5T454-620l-14 100h160q33 0 56.5 23.5T680-440v24q0 8-1.5 15.5T674-385l-93 217q-10 22-30 35t-44 13Zm0-80 93-216v-24H348l19-134-127 127v247h267Zm-267 0v-247 247Z"/></svg>
-                        <span>Rate this</span>
-                    </a>
-                    <a href="" class="bg-primary rounded-full px-4 py-2 flex gap-2 hover:bg-primary/50 transition-all">
-                        <svg class="fill-black dark:fill-white" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"><path d="M280-80q-33 0-56.5-23.5T200-160q0-33 23.5-56.5T280-240q33 0 56.5 23.5T360-160q0 33-23.5 56.5T280-80Zm400 0q-33 0-56.5-23.5T600-160q0-33 23.5-56.5T680-240q33 0 56.5 23.5T760-160q0 33-23.5 56.5T680-80ZM246-720l96 200h280l110-200H246Zm-38-80h590q23 0 35 20.5t1 41.5L692-482q-11 20-29.5 31T622-440H324l-44 80h480v80H280q-45 0-68-39.5t-2-78.5l54-98-144-304H40v-80h130l38 80Zm134 280h280-280Z"/></svg>
-                        <span>More Theme</span>
+                    <span class="bg-black/20 dark:bg-white/20 rotate-25 h-6 lg:h-7 w-[3px]"></span>
+                    <a href="./index.html">
+                        <img src="./assets/image/logo.png" alt="theme logo" class="h-6 lg:h-7">
                     </a>
                 </div>
+            </div>
+            <!-- right side -->
+            <div class="lg:gap-4 gap-2 flex">
+                <a target="_blank" href="https://themeforest.net/user/code-ovik"" class="flex group gap-2 bg-light dark:bg-dark rounded-full items-center justify-center aspect-square lg:aspect-auto lg:px-4 hover:bg-primary">
+                    <svg class="fill-black dark:fill-white group-hover:fill-constrant p-1 h-full" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"><path d="m713-280 127-297v-23H588l19-134-55 55q-8-8-28-28.5T496-736l144-144 32 32q14 14 19.5 31.5T694-780l-14 100h160q33 0 56.5 23.5T920-600v23q0 8-1.5 16t-4.5 16l-93 216q-10 22-30 35.5T747-280h-34ZM240-120H40v-400h200v80H120v240h120v80Zm267 0H160v-360l240-240 32 32q14 14 19.5 31.5T454-620l-14 100h160q33 0 56.5 23.5T680-440v24q0 8-1.5 15.5T674-385l-93 217q-10 22-30 35t-44 13Zm0-80 93-216v-24H348l19-134-127 127v247h267Zm-267 0v-247 247Z"/></svg>
+                    <span class="hidden lg:block group-hover:text-constrant">Rate this Theme</span>
+                </a>
+                <a target="_blank" href="https://themeforest.net/user/code-ovik"" class="flex group gap-2 bg-light dark:bg-dark rounded-full items-center justify-center aspect-square lg:aspect-auto lg:px-4 hover:bg-primary">
+                    <svg class="fill-black dark:fill-white group-hover:fill-constrant p-1 h-full" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"><path d="M280-80q-33 0-56.5-23.5T200-160q0-33 23.5-56.5T280-240q33 0 56.5 23.5T360-160q0 33-23.5 56.5T280-80Zm400 0q-33 0-56.5-23.5T600-160q0-33 23.5-56.5T680-240q33 0 56.5 23.5T760-160q0 33-23.5 56.5T680-80ZM246-720l96 200h280l110-200H246Zm-38-80h590q23 0 35 20.5t1 41.5L692-482q-11 20-29.5 31T622-440H324l-44 80h480v80H280q-45 0-68-39.5t-2-78.5l54-98-144-304H40v-80h130l38 80Zm134 280h280-280Z"/></svg>
+                    <span class="hidden lg:block group-hover:text-constrant">More Theme</span>
+                </a>
+                <a target="_blank" href="https://codeovik.web.app/contact" class="flex group gap-2 bg-light dark:bg-dark rounded-full items-center justify-center aspect-square lg:aspect-auto lg:px-4 hover:bg-primary">
+                    <svg class="fill-black dark:fill-white group-hover:fill-constrant p-1 h-full" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"><path d="m480-80-10-120h-10q-142 0-241-99t-99-241q0-142 99-241t241-99q71 0 132.5 26.5t108 73q46.5 46.5 73 108T800-540q0 75-24.5 144t-67 128q-42.5 59-101 107T480-80Zm80-146q71-60 115.5-140.5T720-540q0-109-75.5-184.5T460-800q-109 0-184.5 75.5T200-540q0 109 75.5 184.5T460-280h100v54Zm-101-95q17 0 29-12t12-29q0-17-12-29t-29-12q-17 0-29 12t-12 29q0 17 12 29t29 12Zm-29-127h60q0-30 6-42t38-44q18-18 30-39t12-45q0-51-34.5-76.5T460-720q-44 0-74 24.5T344-636l56 22q5-17 19-33.5t41-16.5q27 0 40.5 15t13.5 33q0 17-10 30.5T480-558q-35 30-42.5 47.5T430-448Zm30-65Z"/></svg>
+                    <span class="hidden lg:block group-hover:text-constrant">Support</span>
+                </a>
                 <button id="darkToggle" class="cursor-pointer">
-                    <svg class="fill-white h-8 lg:h-10 hover:bg-primary/50 transition-all aspect-square hidden dark:block dark:bg-dark bg-light p-2 rounded-full" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M7 12a5 5 0 1 1 5 5 5 5 0 0 1-5-5zm5-7a1 1 0 0 0 1-1V3a1 1 0 0 0-2 0v1a1 1 0 0 0 1 1zm-1 15v1a1 1 0 0 0 2 0v-1a1 1 0 0 0-2 0zm10-9h-1a1 1 0 0 0 0 2h1a1 1 0 0 0 0-2zM3 13h1a1 1 0 0 0 0-2H3a1 1 0 0 0 0 2zm14.657-5.657a1 1 0 0 0 .707-.293l.707-.707a1 1 0 1 0-1.414-1.414l-.707.707a1 1 0 0 0 .707 1.707zM5.636 16.95l-.707.707a1 1 0 1 0 1.414 1.414l.707-.707a1 1 0 0 0-1.414-1.414zm11.314 0a1 1 0 0 0 0 1.414l.707.707a1 1 0 0 0 1.414-1.414l-.707-.707a1 1 0 0 0-1.414 0zM5.636 7.05A1 1 0 0 0 7.05 5.636l-.707-.707a1 1 0 0 0-1.414 1.414z"/></svg>
-                    <svg class="fill-black h-8 lg:h-10 hover:bg-primary/50 transition-all aspect-square dark:hidden dark:bg-dark bg-light p-2 rounded-full" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M11.993,3a9.326,9.326,0,0,0-1.138,4.477,8.8,8.8,0,0,0,8.569,9.015c.2,0,.385-.017.576-.03A8.5,8.5,0,0,1,12.569,21,8.8,8.8,0,0,1,4,11.985,8.83,8.83,0,0,1,11.993,3Z"/></svg>
+                    <svg class="fill-white h-8 lg:h-10 hover:bg-primary transition-all aspect-square hidden dark:block dark:bg-dark bg-light p-2 rounded-full" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M7 12a5 5 0 1 1 5 5 5 5 0 0 1-5-5zm5-7a1 1 0 0 0 1-1V3a1 1 0 0 0-2 0v1a1 1 0 0 0 1 1zm-1 15v1a1 1 0 0 0 2 0v-1a1 1 0 0 0-2 0zm10-9h-1a1 1 0 0 0 0 2h1a1 1 0 0 0 0-2zM3 13h1a1 1 0 0 0 0-2H3a1 1 0 0 0 0 2zm14.657-5.657a1 1 0 0 0 .707-.293l.707-.707a1 1 0 1 0-1.414-1.414l-.707.707a1 1 0 0 0 .707 1.707zM5.636 16.95l-.707.707a1 1 0 1 0 1.414 1.414l.707-.707a1 1 0 0 0-1.414-1.414zm11.314 0a1 1 0 0 0 0 1.414l.707.707a1 1 0 0 0 1.414-1.414l-.707-.707a1 1 0 0 0-1.414 0zM5.636 7.05A1 1 0 0 0 7.05 5.636l-.707-.707a1 1 0 0 0-1.414 1.414z"/></svg>
+                    <svg class="fill-black h-8 lg:h-10 hover:bg-primary transition-all aspect-square dark:hidden dark:bg-dark bg-light p-2 rounded-full" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M11.993,3a9.326,9.326,0,0,0-1.138,4.477,8.8,8.8,0,0,0,8.569,9.015c.2,0,.385-.017.576-.03A8.5,8.5,0,0,1,12.569,21,8.8,8.8,0,0,1,4,11.985,8.83,8.83,0,0,1,11.993,3Z"/></svg>
                 </button>
-                <button id="openMenu" class="lg:hidden">
-                    <svg class="fill-white h-8 w-8 lg:h-10 lg:w-10 hover:bg-primary/50 transition-all aspect-square dark:bg-dark bg-light p-2 rounded-full" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg>
+                <button id="openMenu" class="lg:hidden bg-light dark:bg-dark rounded-full">
+                    <svg class="fill-black dark:fill-white h-8 w-8 lg:h-10 lg:w-10 aspect-square p-2" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg>
                 </button>
             </div>
         </nav>
         <div id="closeNav" class="w-full h-dvh z-3 fixed top-0 left-0 pointer-events-none opacity-0"></div>
-        <div id="sideBar" class="w-70 z-4 pl-2 pt-2 lg:pt-0 bottom-0 fixed bg-[#050505] lg:bg-transparent -left-70 lg:left-0 h-dvh lg:h-[calc(100%_-_72px)] overflow-auto transition-all lg:transition-none duration-300">
-            <div class="lg:hidden flex gap-2 flex-wrap mb-5">
-                <a href="" class="bg-light dark:bg-dark rounded-full w-max px-4 py-2 flex gap-2 hover:bg-primary/50 transition-all">
-                    <svg class="fill-black dark:fill-white" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"><path d="m480-80-10-120h-10q-142 0-241-99t-99-241q0-142 99-241t241-99q71 0 132.5 26.5t108 73q46.5 46.5 73 108T800-540q0 75-24.5 144t-67 128q-42.5 59-101 107T480-80Zm80-146q71-60 115.5-140.5T720-540q0-109-75.5-184.5T460-800q-109 0-184.5 75.5T200-540q0 109 75.5 184.5T460-280h100v54Zm-101-95q17 0 29-12t12-29q0-17-12-29t-29-12q-17 0-29 12t-12 29q0 17 12 29t29 12Zm-29-127h60q0-30 6-42t38-44q18-18 30-39t12-45q0-51-34.5-76.5T460-720q-44 0-74 24.5T344-636l56 22q5-17 19-33.5t41-16.5q27 0 40.5 15t13.5 33q0 17-10 30.5T480-558q-35 30-42.5 47.5T430-448Zm30-65Z"/></svg>
-                    <span>Support</span>
-                </a>
-                <a href="" class="bg-light dark:bg-dark rounded-full w-max px-4 py-2 flex gap-2 hover:bg-primary/50 transition-all">
-                    <svg class="fill-black dark:fill-white" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"><path d="m713-280 127-297v-23H588l19-134-55 55q-8-8-28-28.5T496-736l144-144 32 32q14 14 19.5 31.5T694-780l-14 100h160q33 0 56.5 23.5T920-600v23q0 8-1.5 16t-4.5 16l-93 216q-10 22-30 35.5T747-280h-34ZM240-120H40v-400h200v80H120v240h120v80Zm267 0H160v-360l240-240 32 32q14 14 19.5 31.5T454-620l-14 100h160q33 0 56.5 23.5T680-440v24q0 8-1.5 15.5T674-385l-93 217q-10 22-30 35t-44 13Zm0-80 93-216v-24H348l19-134-127 127v247h267Zm-267 0v-247 247Z"/></svg>
-                    <span>Rate this</span>
-                </a>
-                <a href="" class="bg-primary rounded-full w-max px-4 py-2 flex gap-2 hover:bg-primary/50 transition-all">
-                    <svg class="fill-black dark:fill-white" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"><path d="M280-80q-33 0-56.5-23.5T200-160q0-33 23.5-56.5T280-240q33 0 56.5 23.5T360-160q0 33-23.5 56.5T280-80Zm400 0q-33 0-56.5-23.5T600-160q0-33 23.5-56.5T680-240q33 0 56.5 23.5T760-160q0 33-23.5 56.5T680-80ZM246-720l96 200h280l110-200H246Zm-38-80h590q23 0 35 20.5t1 41.5L692-482q-11 20-29.5 31T622-440H324l-44 80h480v80H280q-45 0-68-39.5t-2-78.5l54-98-144-304H40v-80h130l38 80Zm134 280h280-280Z"/></svg>
-                    <span>More Theme</span>
-                </a>
-            </div>
+        <div id="sideBar" class="w-70 z-4 pl-2 pt-2 lg:pt-0 bottom-0 fixed bg-[#fff] dark:bg-[#050505] lg:bg-transparent -left-70 lg:left-0 h-dvh lg:h-[calc(100%_-_72px)] overflow-auto transition-all lg:transition-none duration-300">
             <ul class="flex flex-col gap-0.5 ">
                 <!-- sidebar start -->
                 <li><a href="#intro">Intro</a></li>
@@ -71,21 +59,21 @@
             </ul>
         </div>
 
-        <main class="mt-18 lg:ml-75 lg:mr-5 ml-4 mr-4">
+        <main class="mt-18 lg:ml-75 lg:mr-5 ml-4 mr-4 space-y-30">
             <!-- main content start -->
             <section id="intro">
                 <h2>Introducing our theme</h2>
                 <p>Welcome to OVIK, a modern and fully responsive portfolio template designed for creative professionals, freelancers, designers, developers, photographers, and agencies who want to showcase their work in a sleek and professional way. This template provides a perfect balance between aesthetics and functionality, allowing you to present your projects, skills, and achievements with clarity and style.</p>
                 <img src="./assets/image/1.png" alt="">
                 <h3>Theme information</h3>
-                <div class="p-3 md:p-5 bg-linear-65 from-primary to-secondary rounded-2xl lg:rounded-3xl text-white mb-2">
-                    <p class="text-sm lg:text-lg opacity-100"><span class="font-bold">Theme Name: </span>OVIk - Personal Portfolio HTML Template</p>
-                    <p class="text-sm lg:text-lg opacity-100"><span class="font-bold">Creaded: </span>27 August, 2025</p>
-                    <p class="text-sm lg:text-lg opacity-100"><span class="font-bold">Author: </span><a href="">CodeOVIK</a></p>
-                    <p class="text-sm lg:text-lg opacity-100"><span class="font-bold">Version: 3.6</p>
-                    <p class="text-sm lg:text-lg opacity-100"><span class="font-bold">Last update: 27 August, 2025</p>
-                    <p class="text-sm lg:text-lg opacity-100"><span class="font-bold">Compatible With: </span>Tailwind CSS</p>
-                    <p class="text-sm lg:text-lg opacity-100"><span class="font-bold">Compatible Browsers: </span>Chrome, Firefox, Safari, Edge, Opera</p>
+                <div class="p-4 bg-linear-65 from-primary to-secondary rounded-xl lg:rounded-xl text-white mb-4">
+                    <p class="text-sm lg:text-lg opacity-100 mb-2"><span class="font-bold">Theme Name: </span>OVIk - Personal Portfolio HTML Template</p>
+                    <p class="text-sm lg:text-lg opacity-100 mb-2"><span class="font-bold">Creaded: </span>27 August, 2025</p>
+                    <p class="text-sm lg:text-lg opacity-100 mb-2"><span class="font-bold">Author: </span><a target="_blank" href="https://codeovik.web.app/">CodeOVIK</a></p>
+                    <p class="text-sm lg:text-lg opacity-100 mb-2"><span class="font-bold">Version: 3.6</p>
+                    <p class="text-sm lg:text-lg opacity-100 mb-2"><span class="font-bold">Last update: 27 August, 2025</p>
+                    <p class="text-sm lg:text-lg opacity-100 mb-2"><span class="font-bold">Compatible With: </span>Tailwind CSS</p>
+                    <p class="text-sm lg:text-lg opacity-100 mb-2"><span class="font-bold">Compatible Browsers: </span>Chrome, Firefox, Safari, Edge, Opera</p>
                 </div>
                 <h3>Included files</h3>
                 <p>After downloading the package, you will get <strong>two</strong> main folders: <strong>Documentation</strong> and <strong>Template</strong>. The Documentation folder contains HTML files and assets; you can double-click any HTML file to open and view the docs in your browser. It provides detailed instructions on how to install and customize the template. The Template folder is the main template and includes all HTML, CSS, JS files, and assets needed to run your portfolio website.</p>
@@ -94,11 +82,18 @@
 
             <section id="requirements">
                 <h2>Requirement</h2>
-                <p>Before using the OVIK template, ensure you have Visual studio code(vs code). Follow this step to download it.</p>
+                <p>Before using the OVIK template, ensure you have to install this.</p>
                 <ul>
-                    <li>Go this line <a href="https://code.visualstudio.com/download">click me</a> and download vs code based on your operating system.</li>
-                    <img src="./assets/image/3.png" alt="">
+                    <li>Vs Code</li>
+                    <li>Vs Code</li>
+                    <li>Vs Code</li>
                 </ul>
+                <p>List of ol:</p>
+                <ol>
+                    <li>i</li>
+                    <li>i</li>
+                    <li>i</li>
+                </ol>
             </section>
 
             <section id="setup">
@@ -149,6 +144,6 @@ module.exports = {
                     </tbody>
             </section>
         </main>
-        <script defer src="./assets/js/script.js"></script>
+        <script defer src="./assets/script.js"></script>
     </body>
 </html>
